UHF-9050: Fix supplementary button gap

--- a/src/scss/05_objects/_button.scss
+++ b/src/scss/05_objects/_button.scss
@@ -702,7 +702,6 @@ p > a.hds-button.hds-button--supplementary:first-child {
   }
 
   &:not(:empty)[data-icon-start]::before{
-    margin-inline-end: -8px;
     margin-inline-start: -16px; // In current HDS styles, this icon is closer to the starting edge than plain label (left edge on LTR languages)
   }
 
@@ -821,6 +820,8 @@ p > a.hds-button.hds-button--supplementary:first-child {
 
   // SUPPLEMENTARY
   &[data-variant='supplementary'] {
+    gap: $spacing-half; // For some reason hds styles have less gap between supplementary icon and label
+
     // Backgrounds
     --background-color: var(--theme-bg2, transparent);
     --background-color-hover: var(--theme-bg2, var(--color-bus-light));
